--- a/src/components/AboutPage/AboutMain/AboutMain.module.scss
+++ b/src/components/AboutPage/AboutMain/AboutMain.module.scss
@@ -2,6 +2,13 @@
 @import "../../../styles/vars";
 
 .aboutMain {     
-   
-  
+  @include bgWebp(
+    "../assets/images/about/aboutBg.png",
+    "../assets/images/about/aboutBg.webp",
+  );
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: contain;
+  transition: $transition;
+  padding-top: 280px;  
 }
