Made position fixed for footer line

--- a/src/components/AudiencePage/AudienceMain/AudienceMain.module.scss
+++ b/src/components/AudiencePage/AudienceMain/AudienceMain.module.scss
@@ -10,5 +10,5 @@
   background-position: top center;
   background-size: contain;
   transition: $transition;
-  padding-top: 280px;
+  padding: 325px 20px 0;   
 }
