--- a/src/components/HomePage/HomeMain/HomeMain.module.scss
+++ b/src/components/HomePage/HomeMain/HomeMain.module.scss
@@ -10,7 +10,7 @@
   background-position: top center;
   background-size: contain;
   transition: $transition;
-  padding-top: 360px;
+  padding: 380px 20px 0;
 
   &__title {
     text-align: center;    
