--- a/src/components/AboutPage/AboutMain/AboutMain.module.scss
+++ b/src/components/AboutPage/AboutMain/AboutMain.module.scss
@@ -10,5 +10,5 @@
   background-position: top center;
   background-size: contain;
   transition: $transition;
-  padding-top: 280px;  
+  padding: 322px 20px 0;  
 }
