--- a/src/components/global/Footer/Footer.module.scss
+++ b/src/components/global/Footer/Footer.module.scss
@@ -2,12 +2,18 @@
 @import "../../../styles/vars";
 
 .footer {
+  position: fixed;
+  bottom: 8px;
   width: 100%;
   background-color: $color-white;
 
   &__container {
     width: 100%;      
   }
+
+  &__linePosition {
+   @include flexCol();
+  }  
  
   &__line {
     width: 133px;
