--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -45,8 +45,8 @@ a {
   width: 100%;   
   margin: 0 auto;
  // box-sizing:content-box;
-  padding-left: 12px;
-  padding-right: 12px;
+ // padding-left: 12px;
+ // padding-right: 12px;
 
   //padding-left: 20px;
   //padding-right: 20px;
@@ -117,7 +117,7 @@ a {
   li {
     list-style: none;         
     position: relative;
-    @include setFont(16px, 500); 
+    @include setFont(15px, 500); 
     margin-bottom: 12px;     
     padding-left: 25px;  
 
