--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,13 +11,26 @@ $transition: all 0.3s;
 
 // colors
 $color-white: #ffffff;
-$color-black: #2A2A2A; 
+$color-black: #2a2a2a;
+$color-black01:rgba(0, 0, 0, 0.1);
+$color-black03: rgba(0, 0, 0, 0.03);
 $color-black04: rgba(0, 0, 0, 0.04);
-$color-grey: #A1A1A1;
-$color-green: #79DD4A;
-$color-blueGreen: linear-gradient(90deg, #009DDF 34.7%, #01D44A 66.82%, #9DCF00 98.94%);
+$color-grey: #a1a1a1; 
+$color-lightGrey: #F6F6F6;
+$color-grey04:rgba(34, 34, 34, 0.4);
+$color-green: #79dd4a;
+$color-blueGreen: linear-gradient(
+  90deg,
+  #009ddf 34.7%,
+  #01d44a 66.82%,
+  #9dcf00 98.94%
+);
 
+$color-greenLightGreen: linear-gradient(
+  90deg,
+  #009ddf 0%,
+  #01d44a 11.17%,
+  #9dcf00 22.33%
+);
 
-$color-greenLightGreen: linear-gradient(90deg, #009DDF 0%, #01D44A 11.17%, #9DCF00 22.33%);
-
-$color-red: #FF4B4B;
+$color-red: #ff4b4b;
