--- a/src/components/HomePage/HomeMain/HomeMain.module.scss
+++ b/src/components/HomePage/HomeMain/HomeMain.module.scss
@@ -9,6 +9,8 @@
   background-repeat: no-repeat;
   background-position: top center;
   background-size: contain;
+  max-width: 375px;
+  width: 100%;
   transition: $transition;
   padding: 380px 20px 0;
 
@@ -16,7 +18,6 @@
     text-align: center;    
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
-
      
 }
 
