--- a/src/components/SinglePage/SingleMain/SingleMain.module.scss
+++ b/src/components/SinglePage/SingleMain/SingleMain.module.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/mixins";
 @import "../../../styles/vars";
 
-.aboutMain {     
-   
+.singleMain {     
+  background-color: $color-lightGrey;
 }
