--- a/src/components/global/Footer/Footer.module.scss
+++ b/src/components/global/Footer/Footer.module.scss
@@ -11,6 +11,34 @@
     width: 100%;      
   }
 
+  &__menu {
+    @include flexCol(space-around, center);
+  // background: green;
+   height: 50px;    
+   
+   svg {
+    @include svg(24px)
+   }
+  }
+
+  &__switcher {
+    width: 40px;      
+    height: 40px;
+    background: $color-blueGreen;
+    border-radius: 50%;
+    &:after {
+      color: red;
+      width: 18px;
+      height: 18px;
+      border: 1px solid $color-white;
+    }
+
+
+  }
+
+
+
+
   &__linePosition {
    @include flexCol();
   }  
