Added svg gradient icons in footer menu

--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -67,3 +67,35 @@
   
    
 }
+
+
+
+
+/*
+VIdeogame 
+
+background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
+
+Meetup
+
+background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%),
+linear-gradient(291.38deg, #FFCADA 2.07%, #FF8D9A 97.65%);
+
+tvorchestwo
+
+background: linear-gradient(291.38deg, #EBCAFF 2.07%, #EC8DFF 97.65%);
+
+Kulxtura
+
+background: linear-gradient(291.38deg, #7CE0F3 2.07%, #C7A8FF 50.06%, #FF7D94 97.65%);
+
+travel
+
+background: linear-gradient(291.38deg, #CAD2FF 2.07%, #4CBFC9 97.65%);
+
+progulki
+
+background: linear-gradient(291.38deg, #E2FFCA 2.07%, #69C249 97.65%);
+
+
+*/
