--- a/src/components/SearchPage/SearchMain/SearchMain.module.scss
+++ b/src/components/SearchPage/SearchMain/SearchMain.module.scss
@@ -6,10 +6,9 @@
 
    &__categoryContainer {
       display: flex;
-      gap: 10px;
+      //gap: 10px;
       margin-top: 12px;
    }
-
    
    &__gradientPanel {
       display: flex;
@@ -19,8 +18,6 @@
       background: linear-gradient(90deg, #009DDF 0%, #01D44A 50%, #9DCF00 100%);
       border-radius: 8px;
       padding: 12px 18px;
- 
-
    }
 
    &__btnCategory {
@@ -34,6 +31,8 @@
          cursor: pointer;         
       }
    }
-
+   .swiper-slide {
+      width: 100px !important; /* Adjust this value as needed */
+   }
    
 }
