--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -18,7 +18,7 @@
     height: 100px;
     @include flexCol();
     flex-direction: column;
-    background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
+    // background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
     border-radius: 8px;
   }
 
@@ -119,8 +119,13 @@ background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
 
 Meetup
 
-background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%),
+background:  
+  
 linear-gradient(291.38deg, #FFCADA 2.07%, #FF8D9A 97.65%);
+
+
+
+
 
 tvorchestwo
 
