--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -22,7 +22,7 @@ button:active,
 a:focus-visible {
   outline: none;
   border: none;
-  background-color: transparent;
+ // background-color: transparent;
 }
 
 a {
