--- a/src/components/layout/SearchFilter/SearchFilter.module.scss
+++ b/src/components/layout/SearchFilter/SearchFilter.module.scss
@@ -11,11 +11,11 @@
   box-shadow: 0px 13px 13px 0px rgba(0, 0, 0, 0.02);
   padding: 12px;
 
-  input[type="text"] {
+  &__inputSearch {
     width: 300px;
     height: 40px;
     @include setFont(14px, 500, $color-black);
-    background: $color-black04;
+    background: $color-black04;   
     border: none;
     outline: none;
     border-radius: 10px;
@@ -28,12 +28,23 @@
     }
   }
   
-  &__filterIcon {
+  &__btnFilter {
+    @include flexCol();
     width: 40px;
     height: 40px;
     background: $color-black04;  
     border-radius: 10px;
     cursor: pointer; 
+
+    &:active {
+      box-shadow: 0 2px 4px rgba(1, 12, 16, 0.3);
+      transform: translateY(-1px);
+    }
+  }
+
+  &__filterIcon {
+   width: 20px;
+   height: 18px;
   }
   
 }
