--- a/src/components/global/Footer/Footer.module.scss
+++ b/src/components/global/Footer/Footer.module.scss
@@ -5,6 +5,8 @@
   position: fixed;
   bottom: 13px;
   bottom: 0;
+  z-index: 1;
+
   width: 100%;
   background-color: $color-white;
   padding-top: 10px;
