Test images quality

--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -47,7 +47,7 @@
 
   &__categoryImg {
    // max-width: 67%;
-   max-width: 55%;
+   max-width: 30%;
     width: 100%;     
   }
   
@@ -155,4 +155,13 @@ progulki
 background: linear-gradient(291.38deg, #E2FFCA 2.07%, #69C249 97.65%);
 
 
+
+ Meetup
+ background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%),
+linear-gradient(291.38deg, #FFCADA 2.07%, #FF8D9A 97.65%);
+
+
+
+
+ mas
 */
