--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -47,14 +47,15 @@
     border-radius: 50%;
     background: linear-gradient(138.37deg, #009DDF 14.8%, #01D44A 50.34%, #9DCF00 85.88%);
     cursor: pointer;    
+
+    &:hover, &:active {
+      background: linear-gradient(138.37deg, #01D44A 14.8%, #009DDF 50.34%, #9DCF00 85.88%);
+    }
   }
   
   &__cameraIcon {
-    @include svg(26px, $color-white);    
+    @include svg(26px, $color-white);  
 
-    &:hover {
-      fill:#A5F77E;
-    }
   }
 
   &__registrationContainer {
