--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -55,7 +55,7 @@
   
   &__cameraIcon {
     @include svg(26px, $color-white);  
-
+    cursor: pointer;   
   }
 
   &__registrationContainer {
@@ -64,7 +64,6 @@
     gap: 16px;
     padding: 24px 0 36px;
   }
-
 
   input[type="text"], 
   select {
@@ -119,14 +118,8 @@
         mask-size: contain;
       }
     }
-  }
-
-
-
+  } 
   
-  
-  
-
 
   
 }
