--- a/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
+++ b/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
@@ -21,9 +21,10 @@
     flex-direction: column;
     width: 109px;
     height: 109px;
+    position: relative;
     background-color: $color-black04;
     border-radius: 10px;
-    padding-top: 9px;
+   // padding-top: 9px;
 
     &:hover {
       outline: 2px solid $color-green;
@@ -41,7 +42,14 @@
 
   &__categoryImg {
     width: 100%;
-    max-width: 50%;
+    max-width: 56%;
     transition: $transition;
   }
+
+  &__categoryImgContainer {
+    @include flexCol();
+    width: 100%;
+    height: 70px;
+  }
+  
 }
