--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -97,19 +97,22 @@ a {
   -webkit-text-fill-color: transparent;
  }
 
- .btnNextContainer {
+ .btnNextPageContainer {
   position: fixed;
-  bottom: 15px;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
-  max-width: 325px;
-  display: flex; 
+  width: 100%; 
+  @include flexCol(); 
+  background-color: $color-white;
+ // padding-top: 10px;
+  padding-bottom: 15px;
   z-index: 1;
 }
 
-.btnNext {   
+.btnNextPage {   
   width: 100%;
+  max-width: 325px;; 
   height: 52px;
   line-height: 52px;  
   text-align: center;   
