--- a/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
+++ b/src/components/CategoriesPage/CategoriesMain/CategoriesMain.module.scss
@@ -26,7 +26,7 @@
     border-radius: 10px;
    // padding-top: 9px;
 
-    &:hover {
+    &:hover, &:active {
       outline: 2px solid $color-green;
       cursor: pointer;
     }
