--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -65,8 +65,7 @@
     padding: 24px 0 36px;
   }
 
-  input[type="text"], 
-  select {
+  input[type="text"] {
     width: 100%;
     height: 46px;
     @include setFont(14px, 500, $color-black);
@@ -82,19 +81,100 @@
       white-space: normal;
     }
   }
+
+
+
+  &__selectWrapper {
+    position: relative;  
   
-  select {
-    //appearance: none;  
-    padding-right: 32px;  
-    cursor: pointer;
-  }
+    select {
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;  
+      width: 100%;
+      height: 46px;        
+      @include setFont(14px, 500, $color-black);
+      background: $color-black03;
+      border: none;
+      outline: none;
+      border-radius: 10px;    
+      cursor: pointer;
+      padding: 12px 40px 12px 16px;   
+      
+      option {   
+        background: $color-black03;
+        @include setFont(14px, 500, $color-black);
+        outline: none;
+        border: none;
+        border: transparent;
+        cursor: pointer;     
+      }
   
-  input[type="checkbox"] {
+      &:focus {     
+        outline: none;
+        border: none;
+      }      
+    }  
+   
+    &::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: 14px;    
+      transform: translateY(-50%);     
+      width: 14px;
+      height: 8px;     
+      @include setFont(14px, 500, $color-black);         
+      background-image: url("../../../assets/images/icons/arrowSelect.svg");
+      background-size: contain;  
+      background-repeat: no-repeat;
+      pointer-events: none; 
+    }
+  } 
+
+ &__consentCheckbox {        
     appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;        
     width: 20px;
     height: 20px;
-    border: 1px solid $color-black01;
-    border-radius: 4px;
+    position: relative;
+    top: 4px;
+    background: $color-black03;
+    border: 1px solid #E3E3E3;   
+    border-radius: 4px;     
+    cursor: pointer;
+    margin-right: 7px;    
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+
+    &:checked {     
+      &::after {
+        position: absolute;
+        top: -1px;
+        left: 4px;
+        content: '\2714'; 
+        @include setFont(14px, 500, $color-black);                 
+      }
+    }
+
+    &:focus {
+      outline: none;           
+    }  
+  } 
+
+  &__consentText {
+    @include setFont(12px, 500, $color-black);
+  }
+  
+
+
+  /*
+  input[type="checkbox"] {
+    //appearance: none;
+   // width: 20px;
+   // height: 20px;
+   // border: 1px solid $color-black01;
+   // border-radius: 4px;
     background: $color-black03;
     position: relative;
     cursor: pointer;
@@ -118,8 +198,11 @@
         mask-size: contain;
       }
     }
-  } 
+  } */
   
+
+
+
 
   
 }
