--- a/src/components/global/Footer/Footer.module.scss
+++ b/src/components/global/Footer/Footer.module.scss
@@ -10,10 +10,6 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
-  &__container {
-   // width: 100%;      
-  }
-
   &__menu {
    @include flexCol(space-around, center);  
    height: 40px;      
@@ -26,7 +22,7 @@
     background-position: center;
     background-repeat: no-repeat;  
   
-    &:hover {
+    &:hover,  &:active {
       cursor: pointer;
       background-size: contain;  
       background-position: center;
