--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -5,6 +5,7 @@ $md-screen: 768px;
 
 // font
 $font-family: "Montserrat", sans-serif;
+$font-familySecondary: "Poppins", sans-serif;
 
 // Transition
 $transition: all 0.3s;
