--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -92,8 +92,9 @@
       -webkit-appearance: none;
       -moz-appearance: none;  
       width: 100%;
-      height: 46px;        
-      @include setFont(14px, 500, $color-black);
+      height: 46px;     
+     
+      @include setFont(14px, 500, $color-grey04);
       background: $color-black03;
       border: none;
       outline: none;
@@ -144,14 +145,15 @@
     border: 1px solid #E3E3E3;   
     border-radius: 4px;     
     cursor: pointer;
-    margin-right: 7px;    
+    margin-right: 10px;    
     transition: background-color 0.3s ease, border-color 0.3s ease;
 
     &:checked {     
       &::after {
-        position: absolute;
-        top: -1px;
-        left: 4px;
+        position: absolute;        
+        top: 50%; 
+        left: 50%; 
+        transform: translate(-50%, -50%);  
         content: '\2714'; 
         @include setFont(14px, 500, $color-black);                 
       }
@@ -163,10 +165,9 @@
   } 
 
   &__consentText {
-    @include setFont(12px, 500, $color-black);
+    @include setFont(12px, 500, $color-black, $font-familySecondary);  
   }
   
-
 
   /*
   input[type="checkbox"] {
