--- a/src/components/global/Card/Card.module.scss
+++ b/src/components/global/Card/Card.module.scss
@@ -17,8 +17,7 @@
     position: relative;
     height: 100px;
     @include flexCol();
-    flex-direction: column;
-    // background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
+    flex-direction: column;   
     border-radius: 8px;
   }
 
@@ -45,17 +44,12 @@
     @include flexCol();       
   }
 
-  &__categoryImg {
-   // max-width: 67%;
-   max-width: 30%;
+  &__categoryImg { 
+    max-width: 30%;
     width: 100%;     
+    margin-top: 9px;
   }
   
-
-
-
-
-
   &__infoContainerBig {
     display: flex;
     flex-wrap: wrap;
@@ -68,10 +62,7 @@
     flex-wrap: wrap;
     gap: 6px;
     @include setFont(10px, 500, $color-black08);   
-  }
-
-
-  
+  } 
 
   &__greyPanel {
     background-color: $color-black03;
@@ -114,54 +105,5 @@
        width: 180px !important;
        background-color: lightblue !important;  
     }
- }
-  
- 
-   
+ }   
 }
-
-
-//$color-black08
-
-/*
-VIdeogame 
-
-background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%);
-
-Meetup
-
-background:  
-  
-linear-gradient(291.38deg, #FFCADA 2.07%, #FF8D9A 97.65%);
-
-
-
-
-
-tvorchestwo
-
-background: linear-gradient(291.38deg, #EBCAFF 2.07%, #EC8DFF 97.65%);
-
-Kulxtura
-
-background: linear-gradient(291.38deg, #7CE0F3 2.07%, #C7A8FF 50.06%, #FF7D94 97.65%);
-
-travel
-
-background: linear-gradient(291.38deg, #CAD2FF 2.07%, #4CBFC9 97.65%);
-
-progulki
-
-background: linear-gradient(291.38deg, #E2FFCA 2.07%, #69C249 97.65%);
-
-
-
- Meetup
- background: linear-gradient(291.38deg, #CAD2FF 2.07%, #8D98FF 97.65%),
-linear-gradient(291.38deg, #FFCADA 2.07%, #FF8D9A 97.65%);
-
-
-
-
- mas
-*/
