--- a/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
+++ b/src/components/RegistrationPage/RegistrationMain/RegistrationMain.module.scss
@@ -82,56 +82,59 @@
     }
   }
 
+&__selectWrapper {
+  position: relative;
 
+  select {
+    width: 100%;
+    height: 46px;
+    padding: 12px 40px 12px 16px;
+    background: $color-black03;
+    border: none;
+    border-radius: 10px;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    outline: none;
 
-  &__selectWrapper {
-    position: relative;  
-  
-    select {
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;  
-      width: 100%;
-      height: 46px;     
-     
-      @include setFont(14px, 500, $color-grey04);
-      background: $color-black03;
-      border: none;
-      outline: none;
-      border-radius: 10px;    
-      cursor: pointer;
-      padding: 12px 40px 12px 16px;   
-      
-      option {   
-        background: $color-black03;
-        @include setFont(14px, 500, $color-black);
-        outline: none;
-        border: none;
-        border: transparent;
-        cursor: pointer;     
-      }
-  
-      &:focus {     
-        outline: none;
-        border: none;
-      }      
-    }  
-   
-    &::after {
-      content: '';
-      position: absolute;
-      top: 50%;
-      right: 14px;    
-      transform: translateY(-50%);     
-      width: 14px;
-      height: 8px;     
-      @include setFont(14px, 500, $color-black);         
-      background-image: url("../../../assets/images/icons/arrowSelect.svg");
-      background-size: contain;  
-      background-repeat: no-repeat;
-      pointer-events: none; 
+    option {
+      @include setFont(14px, 500, $color-black);
     }
-  } 
+
+    @include setFont(14px, 500, $color-grey04);
+    color: $color-grey04;
+
+    
+    &:not(:has(option:checked[value=""])) {
+      @include setFont(14px, 500, $color-black);
+    }       
+    
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 14px;
+    transform: translateY(-50%);
+    width: 14px;
+    height: 8px;
+    background-image: url("../../../assets/images/icons/arrowSelect.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    pointer-events: none;
+  }
+}
+
+
+
+&__test {
+  color: red;
+  position: absolute;
+  top: 12px;
+  left: 125px;
+}
 
  &__consentCheckbox {        
     appearance: none;
@@ -155,7 +158,7 @@
         left: 50%; 
         transform: translate(-50%, -50%);  
         content: '\2714'; 
-        @include setFont(14px, 500, $color-black);                 
+        @include setFont(1Zpx, 400, $color-black);                 
       }
     }
 
