--- a/src/components/SinglePage/SingleMain/SingleMain.module.scss
+++ b/src/components/SinglePage/SingleMain/SingleMain.module.scss
@@ -2,17 +2,25 @@
 @import "../../../styles/vars";
 
 .singleMain {
-  background-color: $color-lightGrey;  
- // padding: 0 12px 16px 12px;
+  background-color: $color-lightGrey;   
+  padding-bottom: 11px; 
+ 
+ &__title {
+  margin: 20px 0 14px 12px;
+}
 
-  &__columns {
+  &__columns {    
     columns: 2;
-    gap: 11px;
+    gap: 11px;       
+       
+    padding-left: 12px;
+    padding-right: 12px;
   }
 
   &__card {
     padding-bottom: 11px;
     break-inside: avoid;
     display: block;
+    cursor: default;
   }
 }
